# isometric_pattern_matcher

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: main.yml
IsometricPatternMatcher/: CameraModels.h  DotExtractor.h  HexGridCostFunction.h  HexGridFitting.cpp  HexGridFitting.h  Image.h  IsometricPattern.cpp  IsometricPattern.h  LocalParamSe3.cpp  LocalParamSe3.h  PatternMatcherIsometric.cpp  PatternMatcherIsometric.h  ray.h
examples/: main_IsometricPatternDetectionSimple.cpp  main_IsometricPatternGeneration.cpp
scripts/: install_linux_deps.sh  install_osx_deps.sh  run_cpp_tests.sh
test/: test_IsometricDetection.cpp  test_IsometricPattern.cpp
